--- a/src/app/_ui/globals.css
+++ b/src/app/_ui/globals.css
@@ -6,12 +6,16 @@
 
 html {
   font-size: 10px;
+  height: 100%;
 }
 
 body {
   font-size: 62.5%;
   font-family: var(--font-outfit);
   line-height: 24px;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 li {
